# Enoact

./: Cargo.toml  README.md
.github/workflows/: build-and-release.yml
src/: activity_manager.rs  client_id.rs  macros.rs  main.rs
src/route/: index.rs  mod.rs  set_presence.rs  ws.rs
src/route/api/: clear_presence.rs  get_active_app_ids.rs  mod.rs
src/sessions/: mod.rs
web-ui/: .prettierrc  README.md  package.json  svelte.config.js  uno.config.ts  vite.config.ts
web-ui/src/: app.d.ts
web-ui/src/lib/: utils.ts
web-ui/src/lib/components/: Button.svelte  Checkbox.svelte  Input.svelte  Label.svelte  Select.svelte  TimeManagerDialog.svelte
web-ui/src/lib/stores/: active-tab.svelte.ts  local-storage.svelte.ts
web-ui/src/lib/types/: index.ts
web-ui/src/routes/: +layout.svelte  +page.svelte  Activities.svelte  Home.svelte  Settings.svelte
