[package]
name = "enoact"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["ws"] }
dashmap = "6.1.0"
discord-rich-presence = { git = "https://github.com/Lebenoa/discord-rich-presence.git", features = ["deserialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1

[[bin]]
name = "enoact-presence"
path = "bin/enoact-presence.rs"
