[package]
name = "enoact"
version = "0.1.0"
edition = "2024"
default-run = "enoact"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["ws"] }
dashmap = "6.1.0"
discord-rich-presence = { git = "https://github.com/Lebenoa/discord-rich-presence.git", features = [
  "deserialize"
] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
